--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+.carousel-control-prev-icon {
+  display: none !important;
+}
+a.carousel-control-prev {
+  display: none !important;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
