--- a/src/Stylings/Order.scss
+++ b/src/Stylings/Order.scss
@@ -39,6 +39,15 @@
     background-color: #f3f6fd;
     border: 2px solid rgb(233, 233, 233);
   }
+  select {
+    width: 100%;
+    margin: 12px 0px;
+    padding: 8px;
+    text-align: center;
+    border-radius: 5px;
+    background-color: #f3f6fd;
+    border: 2px solid rgb(233, 233, 233);
+  }
 }
 // Payment_____________
 .payment {
